--- a/Webpage Project/index.html
+++ b/Webpage Project/index.html
@@ -13,7 +13,7 @@
         <div class='tab'>
             <a href='writingportfolio.html'>WRITING PORTFOLIO</a></div>
         <div class='tab'>
-            <a href='designportfolio.html'>DESIGN PORTFOLIO</a></div>
+            <a href='Carousel/designportfoliocarousel.html'>DESIGN PORTFOLIO</a></div>
 
     </div>
 
